# k8s-pipelinetest

./: Cargo.toml  Dockerfile  docker-compose.yml  mongo.yaml  todos.yaml
.github/workflows/: docker-publish.yml
src/: db.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs
