[package]
name = "todos"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
bson = { version = "3.1.0", features = ["serde"] }
futures = "0.3.31"
mongodb = "3.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.20.0", features = ["derive"] }
